@startuml

title __STATICS's Class Diagram__\n

  package com.unsw.tilegame {
    package com.unsw.tilegame.entities {
      package com.unsw.tilegame.entities.statics {
        class Door {
            + open : boolean
            + Door()
            + die()
            + render()
            + move()
        }
      }
    }
  }
  

  package com.unsw.tilegame {
    package com.unsw.tilegame.entities {
      package com.unsw.tilegame.entities.statics {
        class Exit {
            {static} + EXIT_ID : int
            + Exit()
            + die()
            + render()
        }
      }
    }
  }
  

  package com.unsw.tilegame {
    package com.unsw.tilegame.entities {
      package com.unsw.tilegame.entities.statics {
        class Rock {
            {static} + ROCK : int
            - xMove : float
            - yMove : float
            {static} + xM : float
            {static} + yM : float
            - Movable : boolean
            {static} - rockSwitch : int
            + Rock()
            + render()
            + die()
            # collisionWithTile()
            + move()
            + collisionWithSwitchTile()
            + calculateTileXMove()
            + calculateXMoveSituation()
            + calculateXMoveSwitchSituation()
            + calculateXMoveCollisions()
            + calculateXMoveSwitchCollisions()
            + calculateTileYMove()
            + calculateYMoveSituation()
            + calculateYMoveCollisions()
            + calculateYMoveSwitchSituation()
            + calculateYMoveSwitchCollisions()
            + moveX()
            + moveY()
            {static} + getRockSwitch()
            + setXMove()
        }
      }
    }
  }
  

  package com.unsw.tilegame {
    package com.unsw.tilegame.entities {
      package com.unsw.tilegame.entities.statics {
        abstract class StaticEntity {
            + StaticEntity()
            {abstract} + die()
            + tick()
        }
      }
    }
  }
  

  package com.unsw.tilegame {
    package com.unsw.tilegame.entities {
      package com.unsw.tilegame.entities.statics {
        class Tree {
            + Tree()
            + render()
            + die()
        }
      }
    }
  }
  

  Door -up-|> StaticEntity
  Exit -up-|> StaticEntity
  Rock -up-|> StaticEntity
  StaticEntity -up-|> Entity
  Tree -up-|> StaticEntity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
